refactor cfg prg